Regenerate Java SDK with latest version of the Swagger spec